--- a/main.html
+++ b/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
-	<head>
-		<title>webgl - geometry - cube</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="./main.css">
+  <head>
+    <title>Down the Veins</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="./main.css">
     <script type="module" src="./app.js"></script>
   </head>
   <body>
