--- a/main.html
+++ b/main.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link type="text/css" rel="stylesheet" href="./main.css">
     <script type="module" src="./app.js"></script>
+    <style>
+      p {
+        text-align: center;
+        font-size: 40px;
+        margin-top: 30px;
+        margin-left: 30px;
+        position:absolute;
+      }
+    </style>
   </head>
   <body>
+    <p id="timer"></p>
   </body>
 
 </html>
