--- a/main.html
+++ b/main.html
@@ -14,10 +14,50 @@
         margin-left: 30px;
         position:absolute;
       }
+      p1 {
+        text-align: center;
+        font-size: 40px;
+        margin-top: 90px;
+        margin-left: 30px;
+        position:absolute;
+      }
+      p2 {
+        text-align: center;
+        font-size: 40px;
+        margin-top: 150px;
+        margin-left: 30px;
+        position:absolute;
+      }
+      p3 {
+        text-align: center;
+        font-size: 40px;
+        margin-top: 210px;
+        margin-left: 30px;
+        position:absolute;
+      }
+      p4 {
+        text-align: center;
+        font-size: 40px;
+        margin-top: 270px;
+        margin-left: 30px;
+        position:absolute;
+      }
+      p5 {
+        text-align: center;
+        font-size: 40px;
+        margin-top: 330px;
+        margin-left: 30px;
+        position:absolute;
+      }
     </style>
-  </head>
+    </head>
   <body>
     <p id="timer"></p>
+    <p1 id="vaccine"></p1>
+    <p2 id="virus"></p2>
+    <p3 id="gel"></p3>
+    <p4 id="mask"></p4>
+    <p5 id="syringe"></p5>
   </body>
 
 </html>
