--- a/index.html
+++ b/index.html
@@ -16,36 +16,43 @@
       }
       p1 {
         text-align: center;
-        font-size: 40px;
-        margin-top: 90px;
+        font-size: 20px;
+        margin-top: 70px;
         margin-left: 30px;
         position:absolute;
       }
       p2 {
         text-align: center;
-        font-size: 40px;
-        margin-top: 150px;
+        font-size: 20px;
+        margin-top: 130px;
         margin-left: 30px;
         position:absolute;
       }
       p3 {
         text-align: center;
-        font-size: 40px;
-        margin-top: 210px;
+        font-size: 20px;
+        margin-top: 190px;
         margin-left: 30px;
         position:absolute;
       }
       p4 {
         text-align: center;
-        font-size: 40px;
-        margin-top: 270px;
+        font-size: 20px;
+        margin-top: 250px;
         margin-left: 30px;
         position:absolute;
       }
       p5 {
         text-align: center;
-        font-size: 40px;
-        margin-top: 330px;
+        font-size: 20px;
+        margin-top: 310px;
+        margin-left: 30px;
+        position:absolute;
+      }
+      p6 {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 370px;
         margin-left: 30px;
         position:absolute;
       }
@@ -57,7 +64,8 @@
     <p2 id="virus"></p2>
     <p3 id="gel"></p3>
     <p4 id="mask"></p4>
-    <p5 id="syringe"></p5>
+    <p5 id="syringeEmpty"></p5>
+    <p6 id="syringeFull"></p6>
   </body>
 
 </html>
