--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
         margin-left: 30px;
         position:absolute;
       }
+      p7 {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 450px;
+        margin-left: 30px;
+        position:absolute;
+      }
     </style>
     </head>
   <body>
@@ -66,6 +73,7 @@
     <p4 id="virus"></p4>
     <p5 id="syringeEmpty"></p5>
     <p6 id="syringeFull"></p6>
+    <p7 id="contact"></p7>
   </body>
 
 </html>
