--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link type="text/css" rel="stylesheet" href="./main.css">
+
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.130.0/build/three.module.js",
+          "gltf-url": "https://unpkg.com/three@0.130.0/examples/jsm/loaders/GLTFLoader.js"
+        }
+      }
+    </script>
+
     <script type="module" src="./app.js"></script>
 
     <style>
